--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,9 @@
 envlist = {py37,py38,py39,py310}-{sqlite,postgresql}
 
 [testenv]
+extras = test
 commands =
-    coverage run --include=.*/party_relationship/* setup.py test
+    coverage run --include=.*/party_relationship/* -m unittest discover -s tests
     coverage report --include=.*/party_relationship/* --omit=*/tests/*
 deps =
     coverage
